<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.papa.ngom.ttsoft.MainActivity" >

    <item
        android:id="@+id/action_settings"
        
        android:showAsAction="never|withText"
        android:title="@string/action_settings"/>
   
    <item android:id="@+id/secure_connect_scan"
          android:icon="@android:drawable/ic_menu_search"
          android:title="@string/secure_connect"
          android:showAsAction="ifRoom|withText" />
     <item
        android:id="@+id/action_sectionnement"
       
        android:showAsAction="never"
        android:title="@string/action_sectionnement"/>
   
    <item
        android:id="@+id/action_switch"
        android:showAsAction="never"
        android:title="@string/text_switch"/>
    <item
        android:id="@+id/action_resetdata"
        android:showAsAction="never"
        android:orderInCategory="10"
        android:title="@string/text_reset_data"/>
    <item
        android:id="@+id/action_loadtickets"
        android:showAsAction="never"       
        android:title="@string/text_load_tickets"/>
    
    <item
        android:id="@+id/action_sync"
        android:showAsAction="never"
       
        android:title="@string/text_sync_data"/>
    <item
        android:id="@+id/action_logout"
        android:showAsAction="never"
        android:orderInCategory="10"
        android:title="@string/text_logout"/>

</menu>
