<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:gravity="center"
  android:fillViewport="true">  

  <RelativeLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:background="#ffffff" >

      <LinearLayout
          android:id="@+id/linearLayout1"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:orientation="vertical"
          android:padding="10dip" >

          <View
              android:id="@+id/separator"
              android:layout_width="match_parent"
              android:layout_height="5dp"
              android:background="#ff8800" />

          <TableLayout
              android:id="@+id/tableLayout1"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:stretchColumns="*" >

              <TableRow
                  android:id="@+id/tableRow1"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content" >

                  <Button
                      android:id="@+id/goSection0"
                      style="@style/ButtonText"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:background="@drawable/blue_button"
                      android:onClick="printClicked"
                      android:text="@string/section_0" >
                  </Button>

                  <Button
                      android:id="@+id/goSection1"
                      style="@style/ButtonText"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:background="@drawable/red_button"
                      android:onClick="printClicked"
                      android:text="@string/section_1" >
                  </Button>
              </TableRow>

              <TableRow
                  android:id="@+id/tableRow2"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content" >

                  <Button
                      android:id="@+id/goSection2"
                      style="@style/ButtonText"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:background="@drawable/green_button"
                      android:onClick="printClicked"
                      android:text="@string/section_2" >
                  </Button>

                  <Button
                      android:id="@+id/goSection3"
                      style="@style/ButtonText"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:background="@drawable/yellow_button"
                      android:onClick="printClicked"
                      android:text="@string/section_3" >
                  </Button>
              </TableRow>

              <TableRow
                  android:id="@+id/tableRow3"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content" >

                  <Button
                      android:id="@+id/goSection4"
                      style="@style/ButtonText"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:background="@drawable/purple_button"
                      android:onClick="printClicked"
                      android:text="@string/section_4" >
                  </Button>

                  <Button
                      android:id="@+id/goSection5"
                      style="@style/ButtonText"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:background="@drawable/black_button"
                      android:onClick="printClicked"
                      android:text="@string/section_5" >
                  </Button>
              </TableRow>

              
          </TableLayout>
      </LinearLayout>

      <Button
          android:id="@+id/imprim"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@+id/linearLayout1"
          android:layout_centerHorizontal="true"
          android:text="Tester l&apos;imprimante"
          android:onClick="imprimer"
          android:textSize="26sp" />
  </RelativeLayout>

</ScrollView>