<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:gravity="center_horizontal"
    android:background="#FFFFFF"
        >


    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:id="@+id/imageView"
            android:layout_alignParentTop="true"
            android:src="@drawable/sudpay"
            android:layout_alignRight="@+id/textView2"
            android:layout_alignLeft="@+id/textView2"
            android:layout_marginTop="20dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:id="@+id/textView"
            android:layout_below="@+id/imageView"
            android:textStyle="bold|italic"
            android:textSize="24dp"
            android:gravity="center_horizontal"
            android:layout_alignLeft="@+id/imageView"
            android:layout_alignRight="@+id/imageView"
            android:layout_marginTop="15dp"
              android:textColor="#000000"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login"
            android:layout_below="@+id/textView"
            android:layout_alignRight="@+id/textView"
            android:layout_alignLeft="@+id/textView"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="10dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:id="@+id/textView2"
            android:layout_below="@+id/login"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:textSize="24sp"
            android:textStyle="bold|italic"
            android:layout_marginTop="15dp"
              android:textColor="#000000"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password"
            android:layout_below="@+id/textView2"
            android:layout_alignRight="@+id/textView2"
            android:layout_alignLeft="@+id/textView2"
            android:layout_marginTop="10dp"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signin"
            android:id="@+id/btnLogin"
            android:layout_below="@+id/password"
            android:layout_centerHorizontal="true"
            android:onClick="connexionClicked"
            android:textSize="20sp"
            android:layout_marginTop="20dp"/>

</RelativeLayout>
</ScrollView>
