<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
       >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dip" >

            <View
                android:id="@+id/separator"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="#ff8800" />

            <TableLayout
                android:id="@+id/tableLayout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:stretchColumns="*" >

                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                      android:layout_marginTop="10dp" >

                    <Button
                        android:id="@+id/goSection20"
                        style="@style/ButtonText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/blue_button"
                        android:onClick="printClicked"
                        android:text="@string/section_20" >
                    </Button>

                    <Button
                        android:id="@+id/goSection21"
                        style="@style/ButtonText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/red_button"
                        android:onClick="printClicked"
                        android:text="@string/section_21">
                    </Button>
                </TableRow>
                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="7000"
                        android:id="@+id/textView"
                        android:layout_below="@+id/linearLayout1"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:textSize="16sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="7500"
                        android:layout_gravity="center"
                        android:id="@+id/textView2"
                        android:layout_below="@+id/linearLayout1"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:textAlignment="center" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <Button
                        android:id="@+id/goSection22"
                        style="@style/ButtonText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/green_button"
                        android:onClick="printClicked"
                        android:text="@string/section_22" >
                    </Button>

                    <Button
                        android:id="@+id/goSection23"
                        style="@style/ButtonText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/yellow_button"
                        android:onClick="printClicked"
                        android:text="@string/section_23" >
                    </Button>
                </TableRow>
                <TableRow
                    android:id="@+id/tableRow4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" 
                    android:layout_marginBottom="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="8500"
                        android:id="@+id/textView3"
                        android:layout_below="@+id/linearLayout1"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:textSize="16sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="9500"
                        android:layout_gravity="center"
                        android:id="@+id/textView4"
                        android:layout_below="@+id/linearLayout1"
                        android:textStyle="bold"
                        android:textSize="16sp" />
                </TableRow>
                <TableRow
                    android:id="@+id/tableRow5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <Button
                        android:id="@+id/goSection24"
                        style="@style/ButtonText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/purple_button"
                        android:onClick="printClicked"
                        android:text="@string/section_24" >
                    </Button>

                    <Button
                        android:id="@+id/goSection25"
                        style="@style/ButtonText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/black_button"
                        android:onClick="printClicked"
                        android:text="@string/section_25" >
                    </Button>
                </TableRow>
                <TableRow
                    android:id="@+id/tableRow6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="6000"
                        android:id="@+id/textView5"
                        android:layout_below="@+id/linearLayout1"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:textSize="16sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="3000"
                        android:layout_gravity="center"
                        android:id="@+id/textView6"
                        android:layout_below="@+id/linearLayout1"
                        android:textStyle="bold"
                        android:textSize="16sp"/>
                </TableRow>
            </TableLayout>
        </LinearLayout>




    </RelativeLayout>

</ScrollView>